<resources>
    <string name="app_name">Food App</string>
    <string name="splash_image_description">splash image description</string>
    <string name="img_logo">imglogo</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password?</string>
    <string name="do_not_have_an_account_sign_up_now">Do not have an account sign up now</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and Email below</string>
    <string name="mobile_number">mobile number(10 digit)</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="name">Name (Min. 3 Characters)</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password(Min. 4 Characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="enter_the_recevied_otp_below">Enter the Recevied OTP below</string>
    <string name="otp_4_characters">OTP (4 characters)</string>
    <string name="submit">Submit</string>
    <string name="preference_file_name">The Preference</string>
    <string name="food_app">Food App</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourites">Favourites</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rest_icon">rest_icon</string>
    <string name="name_of_the_resturant">Name of the Resturant</string>
    <string name="price">Price</string>
    <string name="_4_5">4.5</string>
    <string name="favourite_icon">favourite_icon</string>
    <string name="search_resturants">Search Resturants</string>
    <string name="search_hint">Search here</string>
    <string name="_1">1</string>
    <string name="name_of_dish">Name of Dish</string>
    <string name="rs_299">Rs.299</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="down_arrow_icon">dowm_arrow_icon</string>

</resources>