<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/img_logo"
        android:src="@drawable/app_logo">
    </ImageView>

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="phone"
        android:background="@color/white"
        android:drawableStart="@drawable/baseline_phone_24"
        android:drawablePadding="10dp"
        android:hint="@string/enter_your_number"
        android:inputType="phone"
        android:maxLength="10"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/brown"
        android:textColorHint="#880E4F"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_phone"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="password"
        android:background="@color/white"
        android:drawableStart="@drawable/baseline_security_24"
        android:drawablePadding="10dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/brown"
        android:textColorHint="#880E4F"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_radius"
        android:text="@string/login"
        android:textColor="#E1BEE7"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/txt_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/forget_password"
        android:textColor="@color/brown"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/do_not_have_an_account_sign_up_now"
        android:textColor="@color/brown"
        android:textSize="24sp" />

</RelativeLayout>