<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".ForgetPassActivity">

    <ImageView
        android:id="@+id/img_for"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/img_logo"
        android:src="@drawable/app_logo" />

    <TextView
        android:id="@+id/txt_forget_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_for"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
        android:textColor="@color/brown"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_forget_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_forget_info"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="phone"
        android:maxLength="10"
        android:background="@color/white"
        android:drawableStart="@drawable/baseline_phone_24"
        android:drawablePadding="10dp"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/brown"
        android:textColorHint="#880E4F"
        android:textSize="24sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/et_forget_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_forget_phone"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="email"
        android:background="@color/white"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/brown"
        android:textColorHint="#880E4F"
        android:textSize="24sp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_forget_email"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_radius"
        android:text="@string/next"
        android:textColor="#E1BEE7"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>