<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/et_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="name"
        android:background="@color/white"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/brown"
        android:textColorHint="#880E4F"
        android:textSize="24sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_register_name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="email"
        android:background="@color/white"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/brown"
        android:textColorHint="#880E4F"
        android:textSize="24sp"
        tools:ignore="VisualLintTextFieldSize" />


    <EditText
        android:id="@+id/et_register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_register_email"
        android:layout_marginStart="16dp"
        android:maxLength="10"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="phone"
        android:background="@color/white"
        android:drawableStart="@drawable/baseline_phone_24"
        android:drawablePadding="10dp"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/brown"
        android:textColorHint="#880E4F"
        android:textSize="24sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/et_register_delivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_register_phone"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="postalAddress"
        android:background="@color/white"
        android:drawableStart="@drawable/baseline_location_on_24"
        android:drawablePadding="10dp"
        android:hint="@string/delivery_address"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/brown"
        android:textColorHint="#880E4F"
        android:textSize="24sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_register_delivery"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="password"
        android:background="@color/white"
        android:drawableStart="@drawable/baseline_security_24"
        android:drawablePadding="10dp"
        android:hint="@string/password_min_4_characters"
        android:inputType="textVisiblePassword"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/brown"
        android:textColorHint="#880E4F"
        android:textSize="24sp"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/et_register_con_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_register_password"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="confirm password"
        android:background="@color/white"
        android:drawableStart="@drawable/baseline_security_24"
        android:drawablePadding="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/brown"
        android:textColorHint="#880E4F"
        android:textSize="24sp"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_register_con_password"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_radius"
        android:text="@string/register"
        android:textColor="#E1BEE7"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize" />
</RelativeLayout>